<resources>
    <string name="app_name">My Pill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Input">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="MemorizeUser">Запомнить</string>
    <string name="Exit">Выход</string>
    <string name="autologin">Запомнить</string>
    <string name="enter">Войти</string>
    <string name="email">email почта</string>

    <string name="menu_login">Вход или регистрация</string>
    <string name="menu_home">Главное меню</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_registration">Registration</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>