<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a2c7d2c40a337061af0079a525ed69bf"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/edit_text_login_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/Login"/>

    <EditText
        android:id="@+id/edit_text_password_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:password="true"
        android:hint="@string/Password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_registration_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Registration"/>

        <CheckBox
            android:id="@+id/check_box_auto_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/autologin"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_enter_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"/>

</LinearLayout>