<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.diplom.mypill2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.diplom.mypill2.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.diplom.mypill2.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_enter"
        android:name="com.diplom.mypill2.ui.enter.EnterFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_enter" />

    <fragment
        android:id="@+id/nav_registration"
        android:name="com.diplom.mypill2.ui.enter.RegistrationFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_registration" />

</navigation>